# senzo_trading

./: .env.example  README.md  main.py
.jupyter/: collaboration_sessions.json
agents/: run_task.py
agents/analysts/: fundamental_analyst.py  news_analyst.py  sentimental_analyst.py  technical_analyst.py
agents/manager/: portfolio_manager.py  research_manager.py
agents/researchers/: bearish_researcher.py  bullish_researcher.py  research_debate.py
agents/risk_mgmt/: aggresive.py  conservative.py  neutral.py  risk_mgmt.py
agents/testing/.ipynb_checkpoints/: .jupyter_ystore.db  testing.ipynb
agents/trader/: trader.py
config/: pyproject.toml
config/senzo_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: market_data.py  sentiment_data.py  y_finance.py
graph/: graph.py  state.py
